<resources>
    <string name="app_name">NutriHacks-App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NutriHacks</string>
    <string name="nav_header_subtitle">www.nutrihacks.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Photos</string>
    <string name="menu_ourteam">Our Team</string>
    <string name="menu_bmi">BMI</string>
    <string name="menu_contact">Contact Us</string>

    <string name="home_second">Home Second</string>

    <!--  Home  -->
    <string name="who_we_are">NutriHacks is an all in one platform focused on diets, fitness and well-being. We have a team of professionals in the field and a strong community that will help you improve the quality of your everyday life.</string>
    <string name="Heading">Who We Are</string>

    <!--  Contact  -->
    <string name="contact_us">Contact Us</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <!--  BMI  -->
    <string name="bmi_heading">Calculate Your BMI</string>
    <string name="height">Hieght (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="gender">Gender</string>
    <string name="text_bmi">Your BMI</string>
    <string name="bmi_result"></string>
    <string name="user_des">Unknown</string>
    <!--  Our Tema  -->
    <string name="ceoDesc">CEO Founder

    </string>


</resources>
