<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!--  Home Fragment  -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nutrihacks_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <!--  Photos Gallery Fragment  -->
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.nutrihacks_app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <!--  Contact Us Fragment  -->
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.example.nutrihacks_app.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <!--  BMI Fragment  -->
    <fragment
        android:id="@+id/nav_bmi"
        android:name="com.example.nutrihacks_app.ui.bmi.BmiFragment"
        android:label="@string/menu_bmi"
        tools:layout="@layout/fragment_bmi" />

    <!--  Our Team Fragment  -->
    <fragment
        android:id="@+id/nav_ourteam"
        android:name="com.example.nutrihacks_app.ui.team.TeamFragment"
        android:label="@string/menu_ourteam"
        tools:layout="@layout/fragment_team" />
</navigation>