<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bmi.BmiFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="500dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi_heading"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/userGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/genderMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Male" />

            <RadioButton
                android:id="@+id/genderFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="female" />
        </RadioGroup>

        <TextView
            android:id="@+id/textHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />


        <TextView
            android:id="@+id/textBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_bmi"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/userBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="30sp"
            android:text="0"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/userDesignation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_des"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Submit"
            android:textAlignment="center"
            android:textColor="@android:color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>